@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name: Win32-Daemon
 abstract: Enabling Win32 Perl scripts to run as a true Win32 services.
-version: 20100921
+version: 20101014
 author:
   - Dave Roth
   - libwin32 project <libwin32@perl.org>
@@ -9,8 +9,14 @@ license: perl
 requires: 
   perl: 5.6
 resources:
-  license: http://dev.perl.org/licenses/
-  homepage: http://code.google.com/p/libwin32/
+  license: http://dev.perl.org/licenses
+  homepage: http://code.google.com/p/libwin32
+  repository: http://libwin32.googlecode.com/svn/trunk
+  MailingList: http://groups.google.com/group/perl.libwin32
+no_index:
+  directory:
+    - t
+    - test
 meta-spec:
    version: 1.3
    url: http://module-build.sourceforge.net/META-spec-v1.3.html
